Fix for CodeHint Description CSS Issue (#14728)
* Fix for overlapping dropdown div

* Cleanup #1

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -586,11 +586,10 @@ a:focus {
 
 #codehint-desc {
 	background: @bc-codehint-desc;
-	position: relative;
+	position: absolute;
 	width: 100%;
 	box-sizing: border-box;
 	float: left;
-	top: 34px;
 	border-radius: 1px !important;
 	border-top-left-radius: 0px !important;
 	border-top-right-radius: 0px !important;
